# image-converter-pro

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/core/: config.py  database.py  image_processor.py  worker.py
src/extensions/: __init__.py  extension_manager.py  gif_processor.py  gif_tab.py  gif_worker.py
src/ui/: appearance_manager.py  conversion_tab.py  history_tab.py  main_window.py  settings_tab.py
src/ui/localization/: __init__.py  strings.py  translation_manager.py
src/ui/theming/: __init__.py  theme_manager.py
src/utils/: exceptions.py  formatters.py  icons.py
tests/: conftest.py  test_config.py
